--- a/spring-kppit-render/Dockerfile
+++ b/spring-kppit-render/Dockerfile
@@ -1,22 +1,5 @@
 # Importing JDK and copying required files
-FROM openjdk:19-jdk AS build
-WORKDIR /app
-COPY pom.xml .
-COPY src src
-
-# Copy Maven wrapper
-COPY mvnw .
-COPY .mvn .mvn
-
-# Set execution permission for the Maven wrapper
-RUN chmod +x ./mvnw
-RUN ./mvnw clean package -DskipTests
-
-# Stage 2: Create the final Docker image using OpenJDK 19
-FROM openjdk:19-jdk
-VOLUME /tmp
-
-# Copy the JAR from the build stage
-COPY --from=build /app/target/*.jar app.jar
-ENTRYPOINT ["java","-jar","/spring-kppit-render.jar"]
+FROM eclipse-temurin:21-jdk AS build
 EXPOSE 8080
+ADD target/spring-kppit-test.jar spring-kppit-test.jar
+ENTRYPOINT ["java","-jar","/spring-kppit-test.jar"]
